@@ -17,16 +17,22 @@
 
 package org.keycloak.organization.authentication.authenticators.browser;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 import org.keycloak.Config.Scope;
 import org.keycloak.authentication.Authenticator;
 import org.keycloak.authentication.authenticators.browser.IdentityProviderAuthenticatorFactory;
+import org.keycloak.authentication.authenticators.browser.WebAuthnConditionalUIAuthenticator;
 import org.keycloak.common.Profile;
 import org.keycloak.common.Profile.Feature;
 import org.keycloak.models.KeycloakSession;
+import org.keycloak.models.credential.WebAuthnCredentialModel;
 import org.keycloak.provider.EnvironmentDependentProviderFactory;
 import org.keycloak.provider.ProviderConfigProperty;
+
+import static org.keycloak.provider.ProviderConfigProperty.BOOLEAN_TYPE;
 
 /**
  * @author <a href="mailto:sthorger@redhat.com">Stian Thorgersen</a>
@@ -34,6 +40,7 @@ import org.keycloak.provider.ProviderConfigProperty;
 public class OrganizationAuthenticatorFactory extends IdentityProviderAuthenticatorFactory implements EnvironmentDependentProviderFactory {
 
     public static final String ID = "organization";
+    public static final String REQUIRES_USER_MEMBERSHIP = "requiresUserMembership";
 
     @Override
     public String getId() {
@@ -61,7 +68,14 @@ public class OrganizationAuthenticatorFactory extends IdentityProviderAuthentica
     }
 
     @Override
-    public List<ProviderConfigProperty> getConfigProperties() { // org identity-first login
-        return List.of();
+    public List<ProviderConfigProperty> getConfigProperties() {
+        return Collections.singletonList(new ProviderConfigProperty(REQUIRES_USER_MEMBERSHIP, "Requires user membership", "Enforces that users authenticating in the scope of an organization are members. If not a member, the user won't be able to proceed authenticating to the realm", BOOLEAN_TYPE, null));
+    }
+
+    @Override
+    public Set<String> getOptionalReferenceCategories(KeycloakSession session) {
+        return WebAuthnConditionalUIAuthenticator.isPasskeysEnabled(session)
+                ? Collections.singleton(WebAuthnCredentialModel.TYPE_PASSWORDLESS)
+                : super.getOptionalReferenceCategories(session);
     }
 }
